# GestionadorDeTurnos

./: .dockerignore  .env-example  Dockerfile  README.md  app.py  docker-compose.yml  manage.py  pyproject.toml  run.py
app/: __init__.py
app/config/: config.py
app/mapping/: __init__.py  paciente_schema.py
app/models/: __init__.py  agenda.py  paciente.py  recepcionista.py  turno.py
app/repositories/: __init__.py  agenda_repository.py  base_repository.py  bases_repository.py  create.py  paciente_repository.py  read.py  recepcionista_repository.py  turno_repository.py
app/resources/: __init__.py  agenda_resource.py  home_resource.py  paciente_resource.py
app/services/: __init__.py  agenda_service.py  paciente_service.py  recepcionista_service.py  turno_service.py
documentacion/: diagrama_de_clases_gestiondeturnos.asta
scripts/: check_db.py  create_turnos.py  delete_paciente.py  delete_turno.py  list_pacientes.py  list_turnos.py  reset_turnos_to_1_16.py  run_gestion_turnos.py  test_db.py  trim_turnos.py
test/: test_agenda.py  test_app.py  test_clienteweb.py  test_db.py  test_paciente.py  test_paciente_service.py  test_recepcionista.py  test_recepcionista_service.py  test_turno.py  test_turno_service.py
